2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/strchan.refs: updated streams release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-19  Brian Bidulock  <bidulock@openss7.org>

	* src/drivers/v401p.c: workup of v401p driver

2006-10-17  Brian Bidulock  <bidulock@openss7.org>

	* src/modules/lapb.c: working up lapb

2006-10-16  Brian Bidulock  <bidulcok@openss7.org>

	* strchan/doc/man/man4/mg.4.man: update of manpages
	* strchan/doc/man/man4/mg_ioctl.4.man: update of manpages
	* strchan/src/drivers/mg.c: driver comments

2006-10-14  Brian Bidulock  <bidulcok@openss7.org>

	- added manual pages

	* doc/man/man4/MG.4.man: added manpage from strss7 package
	* doc/man/man4/ch-sdl.4.man: added manpage from strss7 package
	* doc/man/man4/ch.4.man: added manpage from strss7 package
	* doc/man/man4/ch_ioctl.4.man: added manpage from strss7 package
	* doc/man/man4/mg-lm.4.man: added manpage from strss7 package
	* doc/man/man4/mg.4.man: added manpage from strss7 package
	* doc/man/man4/mg_ioctl.4.man: added manpage from strss7 package
	* doc/man/man4/mgc.4.man: added manpage from strss7 package
	* doc/man/man4/mgcp.4.man: added manpage from strss7 package
	* doc/man/man4/mgcp_ioctl.4.man: added manpage from strss7 package
	* doc/man/man4/mx.4.man: added manpage from strss7 package
	* doc/man/man4/mx_ioctl.4.man: added manpage from strss7 package
	* doc/man/man4/mx_sdl.4.man: added manpage from strss7 package
	* doc/man/man4/v401p.4.man: added new manpage
	* doc/man/man4/x100p.4.man: added manpage from strss7 package
	* doc/man/man4/x400p.4.man: added manpage from strss7 package
	* doc/man/man7/CH_ATTACH_REQ.7.man: added manpage from strss7 package
	* doc/man/man7/CH_CONNECT_CON.7.man: added manpage from strss7 package
	* doc/man/man7/CH_CONNECT_REQ.7.man: added manpage from strss7 package